# techdocs-llmops

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: dev-server.ps1  free-port.ps1  ingest.py
src/techdocs_llmops/: __init__.py  config.py
src/techdocs_llmops/api/: main.py  schemas.py
src/techdocs_llmops/ingest/: __init__.py  chunking.py  pdf_loader.py  pipeline.py
src/techdocs_llmops/rag/: __init__.py  chain.py  prompts.py
src/techdocs_llmops/vectorstore/: __init__.py  factory.py
tests/: conftest.py  test_api_contract.py  test_chunking.py  test_rag.py
